<resources>
    <string name="app_name">Kiwi Pills</string>

    <!--Buttons-->
    <string name="btn_update">Actualizar</string>

    <!--Textviews-->
    <string name="lbl_email">Correo electrónico</string>
    <string name="lbl_password">Contraseña</string>
    <string name="text_login">Entrar</string>
    <string name="register_text">¿Aún no tiene una cuenta?</string>
    <string name="register_link">Regístrese</string>
    <string name="lbl_name_2">Nombre</string>
    <string name="lbl_lastname01">Apellido paterno</string>
    <string name="lbl_lastname02">Apellido materno</string>
    <string name="lbl_phone_2">Telefono</string>
    <string name="lbl_search">Buscar</string>
    <string name="lbl_add">Agregar</string>
    <string name="lbl_logout">Cerrar sesión</string>
    <string name="lbl_profile">Mi perfil</string>
    <string name="lbl_editprof">Editar</string>
    <string name="lbl_updateprof">Actualizar</string>
    <string name="lbl_cancel">Cancelar</string>



    <string name="lbl_description">Descripcion</string>
    <string name="lbl_startDate">Fecha de inicio</string>
    <string name="lbl_duration">Duracion (dias)</string>
    <string name="lbl_daysInterval">Intervalo de dias</string>
    <string name="lbl_hoursInterval">Intervalo de horas</string>
    <string name="lbl_startTime">Hora de inicio</string>

    <!--Textviews - titles -->
    <string name="lbl_medicines">Mis medicamentos</string>
    <string name="selectImage">Seleccionar imagen</string>
    <string name="lbl_user">Nombre de usuario</string>
    <string name="lbl_name">Nombre</string>
    <string name="lbl_lastname">Apellido paterno</string>
    <string name="lbl_lastnameM">Apellido materno</string>
    <string name="lbl_phone">Número de teléfono</string>
    <string name="lbl_register">Registrarse</string>
    <string name="agregar_medicamento">Nuevo medicamento</string>
    <string name="nombre_medicamento_lbl">Nombre del medicamento</string>
    <string name="horario_medicamento_lbl">Horario</string>
    <string name="descripcion">Descripción</string>
    <string name="agregar">Agregar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--TabLayout items -->
    <string name="home_tab">Inicio</string>
    <string name="list_tab">Lista</string>
    <string name="calendar_tab">Calendario</string>
    <string name="today_tab">Hoy</string>
    <string name="pillbox">Caja de píldoras de hoy</string>
    <string name="pillmorning">Pastillas de la mañana</string>
    <string name="pillnoon">Pastillas de la tarde</string>
    <string name="pilleve">Pastillas del atardecer</string>
    <string name="pillnight">Pastillas de la noche</string>
    <string name="no_meds">Aún no tiene medicamentos registrados</string>

    <!-- Borradores -->
    <string name="drafts_title">Mis Borradores</string>

    <!-- Servicio de Alarma -->
    <string name="changed_to">Notificación cambiada a las %s</string>
    <string name="time_selected_is">La hora seleccionada es:</string>
    <string name="change_time">Cambia la hora</string>
    <string name="select_time">Selecciona la hora</string>
    <string name="new_notification">Nueva notificación</string>
    <string name="txt_notification"></string>

    <string name="edit_med">Editar medicamento</string>

    <string name="edit_med2">Editar medicamentos</string>
    <!--Spinners-->
    <string-array name="spinner_duration">
        <item>1</item>
    </string-array>

    <string name="sorttext">Ordenar</string>
    <string-array name="sorting">
        <item>A-Z</item>
        <item>Z-A</item>
        <item>Hora (Asc)</item>
        <item>Hora (Desc)</item>
    </string-array>


</resources>