<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group_user">
        <item
            android:id="@+id/opc_profile"
            android:icon="@drawable/ic_user"
            android:title="@string/lbl_profile" />
    </group>

    <group android:id="@+id/group_medicine">
        <item
            android:id="@+id/opc_new"
            android:icon="@drawable/ic_medicine"
            android:title="@string/agregar_medicamento" />
    </group>
    <group >
        <item
            android:id="@+id/opc_borradores"
            android:icon="@drawable/ic_edit_24"
            android:title="Borradores" />
    </group>
    <group>
        <item
            android:id="@+id/opc_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/lbl_logout" />
    </group>

</menu>