<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bottom_nav">

    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabIconTint="@color/material_dynamic_neutral30"
        app:tabIndicator="@color/kiwi_green"
        app:tabIndicatorColor="@color/kiwi_green"
        app:tabSelectedTextColor="@color/kiwi_green"
        app:tabTextAppearance="@style/tab_text"
        app:tabTextColor="@color/material_dynamic_neutral30">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_home_24"
            android:text="@string/home_tab" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic__list_24"
            android:text="@string/list_tab" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_calendar_24"
            android:text="@string/calendar_tab" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_time_filled_24"
            android:text="@string/today_tab" />
    </com.google.android.material.tabs.TabLayout>
</FrameLayout>