<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lbl_title_myme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/pillbox"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_title_myme" />

    <LinearLayout
        android:id="@+id/container_morning"
        android:layout_width="170dp"
        android:layout_height="200dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_green_content"
        android:clickable="true"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider">

        <ImageView
            android:id="@+id/lbl_morning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_green_content"
            android:backgroundTint="@color/kiwi_green"
            android:padding="7dp"
            app:srcCompat="@drawable/ic_sunrise_fill" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_morning"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:itemCount="4"
            tools:listitem="@layout/item_pillbox_medicine" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_day"
        android:layout_width="170dp"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        android:background="@drawable/round_green_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider">

        <ImageView
            android:id="@+id/lbl_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_green_content"
            android:backgroundTint="@color/kiwi_green"
            android:padding="7dp"
            app:srcCompat="@drawable/ic_sun" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_noon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:itemCount="4"
            tools:listitem="@layout/item_pillbox_medicine" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_evening"
        android:layout_width="170dp"
        android:layout_height="200dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/round_green_content"
        android:orientation="vertical"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_morning">

        <ImageView
            android:id="@+id/lbl_evening"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_green_content"
            android:backgroundTint="@color/kiwi_green"
            android:padding="7dp"
            app:srcCompat="@drawable/ic_sunset_fill" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_evening"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:itemCount="4"
            tools:listitem="@layout/item_pillbox_medicine" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/container_night"
        android:layout_width="170dp"
        android:layout_height="200dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        android:background="@drawable/round_green_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_day">

        <ImageView
            android:id="@+id/lbl_night"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_green_content"
            android:backgroundTint="@color/kiwi_green"
            android:padding="7dp"
            app:srcCompat="@drawable/ic_moon" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_night"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:itemCount="4"
            tools:listitem="@layout/item_pillbox_medicine" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_addmedpillbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/round_darkgreen_edittext"
        android:clickable="true"
        android:contentDescription="@string/lbl_add"
        android:ems="10"
        android:fontFamily="@font/quicksand"
        android:hint="@string/lbl_search"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@color/dark_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add_24" />


</androidx.constraintlayout.widget.ConstraintLayout>